implemented swagger and refactor repository update and application update api
